--- a/_modules/scripts/engine/core/utility.html
+++ b/_modules/scripts/engine/core/utility.html
@@ -554,7 +554,7 @@
     <span class="n">coord_list</span> <span class="o">=</span> <span class="p">[]</span>
     <span class="n">last_row</span> <span class="o">=</span> <span class="p">[(</span><span class="mi">0</span><span class="p">,</span> <span class="mi">0</span><span class="p">)]</span>
     <span class="c1"># each size means 1 expansion of the cone</span>
-    <span class="k">for</span> <span class="n">iteration</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="n">size</span><span class="p">):</span>
+    <span class="k">for</span> <span class="n">_</span> <span class="ow">in</span> <span class="nb">range</span><span class="p">(</span><span class="n">size</span><span class="p">):</span>
         <span class="c1"># use a set so we don't add the same coord multiple times</span>
         <span class="n">new_row</span> <span class="o">=</span> <span class="nb">set</span><span class="p">()</span>
         <span class="k">for</span> <span class="n">coord</span> <span class="ow">in</span> <span class="n">last_row</span><span class="p">:</span>
