--- a/_modules/scripts/engine/world_objects/game_map.html
+++ b/_modules/scripts/engine/world_objects/game_map.html
@@ -393,7 +393,6 @@
         <span class="sd">"""</span>
 <span class="sd">        Loads the details from the serialised data back into the GameMap.</span>
 <span class="sd">        """</span>
-        <span class="c1"># FIXME - fix deserialisation</span>
         <span class="k">try</span><span class="p">:</span>
             <span class="n">seed</span> <span class="o">=</span> <span class="n">serialised</span><span class="p">[</span><span class="s2">"seed"</span><span class="p">]</span>
             <span class="n">algo_name</span> <span class="o">=</span> <span class="n">serialised</span><span class="p">[</span><span class="s2">"algorithm_name"</span><span class="p">]</span>
@@ -411,7 +410,7 @@
             <span class="k">return</span> <span class="n">game_map</span>
         <span class="k">except</span> <span class="ne">KeyError</span> <span class="k">as</span> <span class="n">e</span><span class="p">:</span>
             <span class="n">logging</span><span class="o">.</span><span class="n">warning</span><span class="p">(</span><span class="sa">f</span><span class="s2">"GameMap.Deserialise: Incorrect key (</span><span class="si">{</span><span class="n">e</span><span class="o">.</span><span class="n">args</span><span class="p">[</span><span class="mi">0</span><span class="p">]</span><span class="si">}</span><span class="s2">) given. Data not loaded correctly."</span><span class="p">)</span>
-            <span class="k">raise</span> <span class="ne">Exception</span>  <span class="c1"># throw exception to hit outer error handler and exit</span></div>
+            <span class="k">raise</span> <span class="ne">KeyError</span>  <span class="c1"># throw exception to hit outer error handler and exit</span></div>
 
     <span class="c1">################### PROPERTIES ########################################</span>
 
